<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_background"
    android:clipToOutline="true"
    android:elevation="@dimen/dialog_elevation"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/content_padding"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/iconContainer"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="@drawable/custom_dialog_header_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_title_margin_top"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/dialog_title_line_spacing"
            android:text="@string/dialog_title"
            android:textAppearance="@style/DialogTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconContainer" />

        <TextView
            android:id="@+id/dialogBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_body_margin_top"
            android:gravity="top"
            android:lineSpacingExtra="@dimen/dialog_body_line_spacing"
            android:text="@string/dialog_body"
            android:textAppearance="@style/DialogBody"
            android:translationY="@dimen/dialog_body_translation_y"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_container_height"
        android:background="@android:color/transparent"
        android:padding="@dimen/button_container_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/leftButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/left_button_margin_end"
            android:padding="@dimen/button_padding"
            android:text="@string/button_left_text"
            android:textAppearance="@style/ButtonText"
            android:textColor="@color/button_text_color_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rightButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/rightButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_padding"
            android:text="@string/button_right_text"
            android:textAppearance="@style/ButtonText"
            android:textColor="@color/button_text_color_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
